--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,18 +22,13 @@ jobs:
 
       - name: Extract version from tag
         id: get_version
-        run: echo "VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
-
-      - name: Update version in build.gradle.kts
-        run: |
-          sed -i 's/version = ".*"/version = "${{ steps.get_version.outputs.VERSION }}"/' build.gradle.kts
-          cat build.gradle.kts | grep version
+        run: echo "VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_OUTPUT
 
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
       - name: Build project
-        run: ./gradlew build
+        run: ./gradlew build -Pversion=${{ steps.get_version.outputs.VERSION }}
 
       - name: Import GPG key
         env:
@@ -50,6 +45,7 @@ jobs:
           GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
         run: |
           ./gradlew publish \
+            -Pversion=${{ steps.get_version.outputs.VERSION }} \
             -Psigning.password="${GPG_PASSPHRASE}" \
             -Psigning.gnupg.keyName="${{ secrets.GPG_KEY_ID }}"
 
