--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -37,17 +37,21 @@ jobs:
         run: |
           echo "$GPG_PRIVATE_KEY" | base64 --decode | gpg --batch --import
           gpg --list-secret-keys --keyid-format LONG
+          echo "allow-loopback-pinentry" > ~/.gnupg/gpg-agent.conf
+          gpg-connect-agent reloadagent /bye
 
       - name: Publish to Maven Central
         env:
           SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
           SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
           GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
+          GPG_KEY_ID: ${{ secrets.GPG_KEY_ID }}
         run: |
           ./gradlew publish \
             -Pversion=${{ steps.get_version.outputs.VERSION }} \
-            -Psigning.password="${GPG_PASSPHRASE}" \
-            -Psigning.gnupg.keyName="${{ secrets.GPG_KEY_ID }}"
+            -Psigning.gnupg.executable=gpg \
+            -Psigning.gnupg.passphrase="${GPG_PASSPHRASE}" \
+            -Psigning.gnupg.keyName="${GPG_KEY_ID}"
 
       - name: Create GitHub Release
         uses: actions/create-release@v1
