--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -52,6 +52,8 @@ jobs:
             -Psigning.gnupg.executable=gpg \
             -Psigning.gnupg.passphrase="${GPG_PASSPHRASE}" \
             -Psigning.gnupg.keyName="${GPG_KEY_ID}"
+            -PsonatypeUsername="${SONATYPE_USERNAME}"
+            -PsonatypePassword="${SONATYPE_PASSWORD}"
 
       - name: Create GitHub Release
         uses: actions/create-release@v1
