--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -30,30 +30,13 @@ jobs:
       - name: Build project
         run: ./gradlew build -Pversion=${{ steps.get_version.outputs.VERSION }}
 
-      - name: Import GPG key
-        env:
-          GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
-          GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
-        run: |
-          echo "$GPG_PRIVATE_KEY" | base64 --decode | gpg --batch --import
-          gpg --list-secret-keys --keyid-format LONG
-          echo "allow-loopback-pinentry" > ~/.gnupg/gpg-agent.conf
-          gpg-connect-agent reloadagent /bye
-
       - name: Publish to Maven Central
         env:
-          SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
-          SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
-          GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
-          GPG_KEY_ID: ${{ secrets.GPG_KEY_ID }}
-        run: |
-          ./gradlew publish \
-            -Pversion=${{ steps.get_version.outputs.VERSION }} \
-            -Psigning.gnupg.executable=gpg \
-            -Psigning.gnupg.passphrase="${GPG_PASSPHRASE}" \
-            -Psigning.gnupg.keyName="${GPG_KEY_ID}" \
-            -PsonatypeUsername="${SONATYPE_USERNAME}" \
-            -PsonatypePassword="${SONATYPE_PASSWORD}"
+          ORG_GRADLE_PROJECT_mavenCentralUsername: ${{ secrets.SONATYPE_USERNAME }}
+          ORG_GRADLE_PROJECT_mavenCentralPassword: ${{ secrets.SONATYPE_PASSWORD }}
+          ORG_GRADLE_PROJECT_signingInMemoryKey: ${{ secrets.GPG_PRIVATE_KEY }}
+          ORG_GRADLE_PROJECT_signingInMemoryKeyPassword: ${{ secrets.GPG_PASSPHRASE }}
+        run: ./gradlew publishToMavenCentral --no-configuration-cache -Pversion=${{ steps.get_version.outputs.VERSION }}
 
       - name: Create GitHub Release
         uses: actions/create-release@v1
@@ -70,7 +53,7 @@ jobs:
             ### Installation
             ```kotlin
             dependencies {
-                implementation("com.datocms:java-datocms:${{ steps.get_version.outputs.VERSION }}")
+                implementation("io.github.lory1990:java-datocms:${{ steps.get_version.outputs.VERSION }}")
             }
             ```
           draft: false
